# baas-sdk-embedded

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.txt  LICENSE  README.md
cross/raspberrypi/: README.md  pi.cmake
cross/raspberrypi/sampleapp/: CMakeLists.txt  README.md  main.cpp  pi.cmake
doc/: Doxyfile  Doxyfile.inter
functional_tests/: CMakeLists.txt  durbility_ft.cc  ft_cloudfn.cc  ft_cloudfn.h  ft_data.cc  ft_data.h  ft_util.cc  ft_util.h  nb_acl_ft.cc  nb_api_gateway_ft.cc  nb_communication_ft.cc  nb_communication_ft_m.cc  nb_file_bucket_ft.cc  nb_file_bucket_ft_m.cc  nb_http_options_ft.cc  nb_json_ft.cc  nb_logger_ft_m.cc  nb_object_ft.cc  nb_object_ft_m.cc  nb_service_ft.cc  nb_user_ft.cc  nb_user_ft_m.cc
functional_tests/cloudfn/: api.yaml  api_reg.sh  embeddedSdkTest-1.0.0.tgz  function.yaml  index.js  nebula_config.yaml  package.json  test-api.sh
functional_tests/files/: embeddedSdkTest-1.0.0.tgz  upload2.txt
include/necbaas/: nb_acl.h  nb_acl_base.h  nb_acl_permission.h  nb_api_gateway.h  nb_file_bucket.h  nb_file_metadata.h  nb_http_options.h  nb_http_request_method.h  nb_http_response.h  nb_json_array.h  nb_json_object.h  nb_json_type.h  nb_object.h  nb_object_bucket.h  nb_query.h  nb_rest_error.h  nb_result.h  nb_result_code.h  nb_service.h  nb_user.h
include/necbaas/internal/: nb_constants.h  nb_http_file_download_handler.h  nb_http_file_upload_handler.h  nb_http_handler.h  nb_http_request.h  nb_http_request_factory.h  nb_logger.h  nb_rest_executor.h  nb_rest_executor_pool.h  nb_session_token.h  nb_user_entity.h  nb_utility.h
src/: nb_acl.cc  nb_acl_base.cc  nb_api_gateway.cc  nb_file_bucket.cc  nb_file_metadata.cc  nb_http_options.cc  nb_http_response.cc  nb_json_array.cc  nb_json_object.cc  nb_object.cc  nb_object_bucket.cc  nb_query.cc  nb_service.cc  nb_user.cc
src/internal/: nb_constants.cc  nb_http_file_download_handler.cc  nb_http_file_upload_handler.cc  nb_http_handler.cc  nb_http_request.cc  nb_http_request_factory.cc  nb_logger.cc  nb_rest_executor.cc  nb_rest_executor_pool.cc  nb_session_token.cc  nb_user_entity.cc  nb_utility.cc
unit_tests/: CMakeLists.txt  SampleTest.cpp  nb_acl_test.cc  nb_api_gateway_test.cc  nb_file_bucket_test.cc  nb_file_metadata_test.cc  nb_http_file_download_handler_test.cc  nb_http_file_upload_handler_test.cc  nb_http_handler_test.cc  nb_http_options_test.cc  nb_http_request_factory_test.cc  nb_http_request_test.cc  nb_http_response_test.cc  nb_json_array_test.cc  nb_json_object_test.cc  nb_logger_test.cc  nb_object_bucket_test.cc  nb_object_test.cc  nb_query_test.cc  nb_rest_executor_pool_test.cc  nb_rest_executor_test.cc  nb_service_test.cc  nb_session_token_test.cc  nb_user_entity_test.cc  nb_user_test.cc  nb_utility_test.cc  rest_api_mock.h  test_util.h
unit_tests/file/: 1k.txt
unit_tests/tool/: coverage.sh
